[metadata]
name=analyze
version=0.1
description=library of functions for working with time series data
classifiers=
    Programming Language :: Python :: 3
    Operating System :: independant
[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
[options.packages.find]
where = src

